--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ env:
     REPOSITORY_NAME: "website"
     CONTAINER_NAME: "website"
     CLUSTER_NAME: "websitecluster"
-    AWS_DEFAULT_REGION: "ap-south-1"
+    AWS_DEFAULT_REGION: "us-east-1"
     IMAGE_TAG: "latest"
 phases:
   pre_build:
