--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,13 +11,9 @@ env:
 
 phases:
   install:
-    runtime-versions:
-      docker: 20
     commands:
-      - echo "Installing dependencies..."
-      - echo "Docker version:"
+      - echo "Checking installed tools..."
       - docker --version
-      - echo "AWS CLI version:"
       - aws --version
 
   pre_build:
@@ -31,14 +27,13 @@ phases:
   build:
     commands:
       - echo "Build started on $(date)"
-      - echo "Building the Docker image..."
+      - echo "Building Docker image..."
       - docker build -t $REPOSITORY_NAME:$IMAGE_TAG .
       - docker tag $REPOSITORY_NAME:$IMAGE_TAG $REPOSITORY_URI:$IMAGE_TAG
 
   post_build:
     commands:
-      - echo "Build completed on $(date)"
-      - echo "Pushing the Docker image to ECR..."
+      - echo "Pushing Docker image to ECR..."
       - docker push $REPOSITORY_URI:$IMAGE_TAG
       - echo "Writing imagedefinitions.json..."
       - printf '[{"name":"%s","imageUri":"%s"}]' $CONTAINER_NAME $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
